test/fixtures/compile/if/if.assign.we.error
SyntaxError: Expecting "NewLine" or "EOF" but got "i" (fixtures/compile/if/if.assign.we.ks:3:7)