test/fixtures/compile/if/if.inline.missing.nb.we.np1.var.ks
extern foo, bar, qux

var x = if foo() {
}
else {
	pick bar()
}